--- a/about.html
+++ b/about.html
@@ -116,7 +116,7 @@
                 <a href="portfolio.html" class="btn-ghost">
                   View My Work <i class="bi bi-arrow-up-right"></i>
                 </a>
-                <a href="#" class="link-underline">
+                <a href="https://drive.google.com/file/d/1JHRGTM9OBgbFBZEWIv00Xas5EmTiYQtI/view?usp=sharing" target="_blank" class="link-underline">
                   Download Resume <i class="bi bi-download"></i>
                 </a>
               </div>
