--- a/portfolio.html
+++ b/portfolio.html
@@ -132,9 +132,9 @@
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-campaign filter-collaborations">
               <div class="portfolio-card">
                 <div class="portfolio-img">
-                  <img src="assets/img/portfolio/Rally & Relate 2025.png" alt="Portfolio Item" class="img-fluid">
+                  <img src="assets/img/portfolio/kgtennis/kgtennis_rally_and_relate_cover.jpg" alt="Portfolio Item" class="img-fluid">
                   <div class="portfolio-overlay">
-                    <a href="assets/img/portfolio/Rally & Relate 2025.png" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
+                    <a href="assets/img/portfolio/kgtennis/kgtennis_rally_and_relate_cover.jpg" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
                     <a href="rally-relate-2025.html" class="portfolio-details-link"><i class="bi bi-link"></i></a>
                   </div>
                 </div>
